# hpcr

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
facilities/: frontier.toml  perlmutter.toml  polaris.toml
src/: error.rs  lib.rs  main.rs
src/cli/: common.rs  exec.rs  mod.rs  run.rs  setup.rs
src/command/: conflict.rs  mod.rs  setup.rs
src/config/: facility.rs  local.rs  mod.rs
src/runtime/: apptainer.rs  mod.rs  podman.rs  podman_hpc.rs
