[package]
name = "hpcr"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hpcr"
path = "src/main.rs"


[dependencies]
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
thiserror = "2"
dirs      = "5"
